Fixed collapsing rule

--- a/media/styles.scss
+++ b/media/styles.scss
@@ -68,8 +68,8 @@ body {
 
     &.collapsed {
         .group-list {
-            height: 0;
-            min-height: 0;
+            height: 0 !important;
+            min-height: 0 !important;
             margin-top: 0;
         }
 
